--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+---
+# this is an empty front matter
+---
+<ul class="posts">
+	{% for post in site.posts limit:20 %}
+	   <li>
+		   <span>{{ post.date | date_to_string }}</span> &raquo;
+		   <a href="{{ BASE_PATH }}{{ post.url }}">
+		   {{ post.title }}</a>
+	   </li>
+	{% endfor %}
+</ul>
