--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@ title: Hello World!
 tagline: Supporting tagline
 ---
 
-<ul class="posts">
-  {% for post in site.posts %}
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
-  {% endfor %}
-</ul>
+{% for post in site.posts limit:1 %}
+	{{ post.content }}
+{% endfor %}
