--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Hello World!
 tagline: Supporting tagline
 ---
 
+Hello World
+
 {% for post in site.posts limit:1 %}
 	{{ post.content }}
 {% endfor %}
