--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
 ---
-layout: page
-title: Hello World!
-tagline: Supporting tagline
+layout: default
+title: Test
 ---
-
-Hello World
-
-{% for post in site.posts limit:1 %}
-	{{ post.content }}
-{% endfor %}
+<div></div>
