--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 layout: default
 title: Test
 ---
-<h3>Posts</h3> <ul>
-  {% for post in site.posts %}
-  <li>
-    <a href="{{ post.url }}">{{ post.title }}</a>
-  </li>
-  {% endfor %}
-</ul>
+<h1>I wrote about:</h1>
+	<ul>
+  		{% for post in site.posts %}
+  		<li>
+			<a href="{{ post.url }}">{{ post.title }}</a>
+		</li>
+		{% endfor %}
+	</ul>
