Adding post commenting

--- a/_posts/2015-07-23-principles-and-architecture.html
+++ b/_posts/2015-07-23-principles-and-architecture.html
@@ -19,6 +19,7 @@ author:
   last_name: ''
 excerpt: !ruby/object:Hpricot::Doc
   options: {}
+comments: true
 ---
 <p>How do we build design principles into the deepest architecture of things, into the algorithms and mechanisms?</p>
 <p>It goes deeper than an ethos or mission. Those things change, get re-evaluated. Good intent can be reduced to a veneer while the core values are dismantled and exploited. </p>
