--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: mistergough.com
 {% for post in paginator.posts %}
 <h2>{{ post.title }}</h2>
 {{ post.content }}
-<p><a href="{{ post.permalink }}">ADD A COMMENT</a></p>
+<p><a href="{{ post.url }}">ADD A COMMENT</a></p>
 {% endfor %}
 <h2>All Posts</h2>
 	<ul>
