Updated open data camp post

--- a/_posts/2015-02-23-open-data-camp.html
+++ b/_posts/2015-02-23-open-data-camp.html
@@ -25,22 +25,23 @@ author:
   last_name: ''
 excerpt: !ruby/object:Hpricot::Doc
   options: {}
+comments: true
 ---
 <p>Last weekend I attended Open Data Camp in Winchester; my first ever "Camp". As someone who works primarily in design, attending designey events for designers, I'm not used to taking part in the more tech/data end of the events spectrum so I wanted to get my thoughts down.</p>
 <p>I'm not going to go into the format or general organisation of the weekend. To me it seemed to go pretty smoothly. I knew where to be, when, and I got plenty to eat. We never ran out of coffee. I'd like to make particular mention of one of the brilliant organisers, Lucy Knight, not least because I'm lucky enough to work with her.</p>
 <p>I attended a pretty diverse range of sessions: democracy, food, design, and mapping the benefits of open data. I enjoyed them all, although I repeatedly found that the conversation just started as the session ended. From past experience it's usually the case. As the first Open Data Camp it's probably more expected than in other, established events like GovCamp, but it's no bad thing; it helps to plot the course.</p>
 <p>So, general experiences aside, a few things that stood out for me.</p>
-<h2>Public Sector Focus</h2>
+<h3>Public Sector Focus</h3>
 <p>It's inevitable that there will be a strong focus on the public sector in an event like Open Data Camp. Most discussion in the UK around Open Data is still heavily connected with the public sector. And to be honest, if the public sector didn't push on the open data thing who knows how far we'd have got by now.</p>
 <p>My concern is around where we go next. For me, some of the most useful data, the most vital, is going to come from outside the public sector. Finding ways to get corporates to open up what they have is a difficult but worthwhile challenge and I feel like this needs to be pursued as aggressively, if not more so, as open data advocates are pursuing the public sector.</p>
 <p>How can events like Open Data Camp help here? Is there a danger that the public sector focus makes it easier for private entities to slip the net? What are the routes in to these silos?</p>
 <p>The other issues for me around the public sector focus is the potential for us to accept the public sector as it is. I was thinking about this in the session on democracy. With all the technology and data available to us is it enough to engage with machinations of democracy as they currently stand? How can technology, data (and design) help us to advance democracy at its most fundamental level?</p>
-<h2>Design and Data</h2>
+<h3>Design and Data</h3>
 <p>I'm particularly interested in how to get data into the hands of designers and in fact I ran a session on this. It was a difficult one. The first thing I realised was that my definition of designer might not have been shared with everyone in the room. When we talk about data and design the natural common ground is web/app development. In this context it doesn't seem too much to expect designers to learn a bit of code and help bridge the gap that way.</p>
 <p>But many designers are a long way from this. I have to remind myself that my interest in coding says more about me (geek) than the design profession as a whole and that the real common ground comes from creative ways to translate the essence of what each field is about. To this end I think I saw a card game in one of the sessions. We need more things like this. It would be remiss of me not to mention <a href="http://redfront.co.uk/blog/the-data-loop/" target="_blank">Redfront's own Data Loop</a> too.</p>
-<h2>Benefits</h2>
+<h3>Benefits</h3>
 <p>Martin Howitt ran a session on identifying the benefits of open data for different stakeholder groups. Bias aside (it appeals to my designer tendencies but I'm also lucky enough work with Martin as well) this seems to me to be a vital undertaking. If we're going to unlock the real potential of open data then we need more people to understand it, make use of it, demand it.</p>
 <p>If you're interested in contributing to the benefits mapping of open data you can help by adding your comments <a href="https://docs.google.com/spreadsheets/d/1RmAm9YTwsdiz25Fju_-RTFN4LG7SzZKhmNKm_HoAFJ4/edit#gid=0" target="_blank">to this spreadsheet</a>.</p>
-<h2>Hacking Together</h2>
+<h3>Hacking Together</h3>
 <p>One of the sessions I was in made me realise just how much work there is to be done in translating open data into useful things. There are some clever people out there doing clever things with data. There are challenges and hackathons that produce fascinating new applications. And yet the propagation, evolution and adoption of the outputs seems negligible in comparison.</p>
 <p>From a biased designer's point of view I might say that the problem could lie in a missing human element. Are we successfully engaging and designing for the people who really need or want these apps? Could we do more to bring humanity into the process? As I talked about above, I'm passionate about the design component of open data, and as the technology landscape introduces new platforms and devices we need to be even surer that we're embarking on its exploration as a diverse groups of makers and users.</p>
