--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Front Page
 {{ post.content }}
 <p><a href="{{ post.url }}">ADD A COMMENT</a></p>
 {% endfor %}
-<h2>All Posts</h2>
+<h1>Everything</h2>
 	<ul>
   		{% for post in site.posts %}
   		<li>
